--- a/package.json
+++ b/package.json
@@ -20,20 +20,23 @@
     "@nuxtjs/google-fonts": "^3.2.0",
     "@nuxtjs/tailwindcss": "6.14.0",
     "@pinia/nuxt": "^0.11.0",
-    "@quasar/extras": "^1.16.17",
     "@tailwindcss/vite": "^4.1.5",
     "@vueuse/core": "^13.1.0",
     "@vueuse/nuxt": "^13.1.0",
+    "class-variance-authority": "^0.7.1",
+    "clsx": "^2.1.1",
+    "element-plus": ">=2",
     "eslint": "^9.0.0",
     "lodash": "^4.17.21",
+    "lucide-vue-next": "^0.511.0",
     "nuxt": "^3.17.2",
     "nuxt-auth-utils": "0.5.20",
-    "nuxt-quasar-ui": "2.1.12",
     "nuxt-svgo": "^4.1.1",
     "pinia": "^3.0.2",
-    "quasar": "^2.18.1",
     "reka-ui": "^2.2.1",
+    "tailwind-merge": "^3.3.0",
     "tailwindcss": "^4.1.5",
+    "tw-animate-css": "^1.3.3",
     "vite-plugin-inspect": "^11.0.1",
     "vue": "^3.5.13",
     "vue-mess-detector-nuxt-devtools": "^0.1.2",
