--- a/package.json
+++ b/package.json
@@ -25,6 +25,7 @@
     "@vueuse/nuxt": "^13.1.0",
     "class-variance-authority": "^0.7.1",
     "clsx": "^2.1.1",
+    "date-fns": "^4.1.0",
     "element-plus": ">=2",
     "eslint": "^9.0.0",
     "lodash": "^4.17.21",
@@ -37,8 +38,10 @@
     "tailwind-merge": "^3.3.0",
     "tailwindcss": "^4.1.5",
     "tw-animate-css": "^1.3.3",
+    "v-calendar": "^3.1.2",
     "vite-plugin-inspect": "^11.0.1",
     "vue": "^3.5.13",
+    "vue-advanced-cropper": "^2.8.9",
     "vue-mess-detector-nuxt-devtools": "^0.1.2",
     "vue-router": "^4.5.1",
     "zod": "^3.24.4"
