--- a/package.json
+++ b/package.json
@@ -21,6 +21,9 @@
     "@nuxtjs/tailwindcss": "6.14.0",
     "@pinia/nuxt": "^0.11.0",
     "@tailwindcss/vite": "^4.1.5",
+    "@tiptap/pm": "^3.0.9",
+    "@tiptap/starter-kit": "^3.0.9",
+    "@tiptap/vue-3": "^3.0.9",
     "@vueuse/core": "^13.1.0",
     "@vueuse/nuxt": "^13.1.0",
     "class-variance-authority": "^0.7.1",
