--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
     "@nuxtjs/google-fonts": "^3.2.0",
     "@nuxtjs/tailwindcss": "6.14.0",
     "@pinia/nuxt": "^0.11.0",
+    "@splidejs/splide": "^4.1.4",
     "@tailwindcss/vite": "^4.1.5",
     "@tiptap/extension-blockquote": "^3.0.9",
     "@tiptap/extension-details": "^3.0.9",
